# S-P-500

./: .env.example  .gitignore  README.md  docker-compose.yml  metrics.txt  pyproject.toml
initdb/: init.sql
src/: load_tickers.py  yfinance_tickers.py
